--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   get_it: ^8.0.3
   http: ^1.3.0
   iconsax: ^0.0.8
+  lottie: ^3.3.1
+  pin_code_fields: ^8.0.1
+  email_validator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
